--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,22 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.container {
+  margin: 60px auto;
+  padding: 0 15px;
+  color: #2d333f;
+
+  h1 {
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .loading, .error {
+    margin: 60px auto;
+  }
+
+  @media only screen and (min-width: 800px) {
+    max-width: 800px;
+  }
+}
