--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,10 @@ body {
     margin-bottom: 50px;
   }
 
+  h3 {
+    text-align: center;
+  }
+
   .loading, .error {
     margin: 60px auto;
   }
