--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,115 @@ body {
     margin: 60px auto;
   }
 
+  .filters-container {
+    text-align: right;
+    font-size: 14px;
+    padding: 20px 0 40px;
+    
+    .toggle-btn {
+      display: inline-block;
+      width: 224px;
+      height: 45px;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 500;
+      border-radius: 4px;
+      background-color: #da3743;
+      color: #fff;
+      cursor: pointer;
+      outline: none;
+    }
+
+    .sort-container {
+      display: inline-block;
+      position: relative;
+      min-width: 180px;
+      margin-left: 20px;
+
+      button {
+        display: block;
+        box-sizing: border-box;
+        width: 100%;
+        height: 45px;
+        text-align: left;
+        border: 2px solid rgba(0, 0, 0, .12);
+        border-radius: 1px;
+        padding: 11px 16px;
+        background-color: #fff;
+        font-size: 14px;
+        cursor: pointer;
+        font-weight: 500;
+        outline: none;
+      }
+
+      ul {
+        box-sizing: border-box;
+        display: block;
+        position: absolute;
+        top: 45px;
+        left: 0;
+        border: none;
+        margin: 0;
+        padding: 0;
+        max-height: 0;
+        overflow: hidden;
+        transition: all .5s;
+        width: 100%;
+        border: 2px solid #fff;
+        border-top: none;
+
+        li {
+          list-style-type: none;
+          padding: 12px 16px;
+          font-weight: 500; 
+          text-align: left;
+          cursor: pointer;
+          background-color: #fff;
+          color: #2d333f;
+
+          &.active {
+            background-color: #f1f2f4;
+          }
+          
+          &:hover {
+            background-color: #da3743;
+            color: #fff;
+          }
+
+        }
+      }
+
+      &:after {
+        display: block;
+        content: '';
+        position: absolute;
+        top: 18px;
+        right: 20px;
+        width: 6px;
+        height: 6px;
+        border: solid #91949a;
+        border-width: 0 0 2px 2px;
+        transform: rotate(-45deg);
+        transition: transform .5s;
+      }
+
+      &.menu-show {
+        ul {
+          max-height: 200px;
+          border-color: rgba(0, 0, 0, .12);
+        }
+
+        &:after {
+          transform: rotate(-225deg);
+          transform-origin: center;
+        }
+      }
+    }
+  }
+
   @media only screen and (min-width: 800px) {
     max-width: 800px;
   }
+
+
 }
