--- a/src/components/GuestCard.scss
+++ b/src/components/GuestCard.scss
@@ -8,8 +8,8 @@
     width: 100px;
     height: 100px;
     @media only screen and (min-width: 768px) {
-      width: 25%;
-      height: auto;
+      width: 200px;
+      height: 200px;
     }
   }
 
@@ -21,7 +21,7 @@
 
     @media only screen and (min-width: 768px) {
       padding: 20px 0 0 20px;
-      width: 75%;
+      width: calc(100% - 200px);
     }
 
     .name {
